Fixed section spacing.

--- a/src/Containers/Home/Home.module.css
+++ b/src/Containers/Home/Home.module.css
@@ -3,5 +3,4 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
-  flex-grow: inherit;
 }
