--- a/src/Containers/Section/Section.module.css
+++ b/src/Containers/Section/Section.module.css
@@ -1,4 +1,5 @@
 .Section {
+  min-width: 300px;
   height: 400px;
   padding: 16px;
   text-align: center;
@@ -8,4 +9,5 @@
   box-sizing: border-box;
   cursor: pointer;
   color: black;
+  flex-grow: 1;
 }
